# patus_ARM

./: README.md  __ERROR__  calc_integral.py  calc_iteration.py  calc_maximum.py  calc_pearson.py  ip_address_config.txt  measure.sh  script_help.sh
patus/: CMakeLists.txt
patus/arch/: architectures.xml
patus/arch/ARM_NEON/: Makefile  driver.c  neonmathlib.c  neonmathlib.h
patus/benchmark/: .directory  blur-double.stc  blur-float.stc  divergence-float.stc  edge-double.stc  game-of-life-double.stc  game-of-life-float.stc  gradient-float.stc  hinterp-double.stc  hinterp-float.stc  laplacian-double.stc  laplacian-float.stc  laplacian6-double.stc  laplacian6-float.stc  tricubic-double.stc  tricubic-float.stc  vinterp-double.stc  vinterp-float.stc  wave-1-double.stc  wave-1-float.stc  wave-2-double.stc  wave-2-float.stc
patus/runtime/: cycle.h
patus/src/ch/unibas/cs/hpwc/patus/codegen/backend/: BackendFactory.java
patus/src/ch/unibas/cs/hpwc/patus/codegen/backend/arm/: OpenMPARMCodeGenerator.java
tub_measurement/: client
